# FullEngine

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLANS.md  README.md  vcpkg.json
.github/workflows/: windows-package-validation.yml
assets/dev/sample_animation/: skinned_triangle_animation.gltf
assets/dev/sample_terrain/: terrain_quad.fmeshdev  terrain_splat.fmatdev  terrain_splat_2x2.ftexdev
assets/meshes/: AGENTS.md
assets/shaders/: AGENTS.md
assets/shaders/debug/: fs_color_grade.sc  fs_debug_line.sc  fs_decal_projected.sc  fs_outline_composite.sc  fs_particles.sc  fs_scene_present.sc  fs_shadow_preview.sc  fs_ssao.sc  fs_ssao_blur.sc  fs_ssao_composite.sc  fs_ssao_depth.sc  vs_outline_fullscreen.sc  vs_particles.sc  vs_selection_instanced.sc  vs_selection_skinned.sc  vs_ssao_depth_instanced.sc  vs_ssao_depth_mesh.sc  vs_ssao_depth_skinned.sc
assets/shaders/forward/: fs_mesh.sc  fs_sky.sc  varying.def.sc  vs_mesh.sc  vs_mesh_instanced.sc  vs_skinned_mesh.sc  vs_sky.sc
assets/shaders/shadows/: fs_shadow_depth.sc  vs_skinned_shadow.sc  vs_terrain_shadow_instanced.sc
assets/shaders/terrain/: fs_terrain_splat.sc  vs_terrain_instanced.sc
assets/textures/: AGENTS.md
cmake/: FullRendererConfig.cmake.in
docs/: AGENTS.md  animation.md  assets.md  build.md  culling_lod.md  engine_integration.md  engine_overview.md  material_system.md  public_api.md  renderer_conventions.md  renderer_overview.md  shader_pipeline.md  terrain.md
docs/agents/: architecture.md  coding_style.md  definition_of_done.md  dependency_policy.md  doxygen_style.md  implementation_log.md  roadmap.md  split_mapping.md
src/app/: AGENTS.md  main.cpp
src/engine/: AGENTS.md
src/engine/assets/: AGENTS.md  AssetCatalog.cpp  AssetCatalog.hpp  AssetDependencyValidator.cpp  AssetDependencyValidator.hpp  AssetSourceCatalog.cpp  AssetSourceCatalog.hpp  AssetSourceDescriptor.cpp  AssetSourceDescriptor.hpp  AssimpLoadedAssetImporter.cpp  AssimpLoadedAssetImporter.hpp  AssimpRigidNodeSceneImporter.cpp  AssimpRigidNodeSceneImporter.hpp  AssimpSceneProbe.cpp  AssimpSceneProbe.hpp  CookedAssetManifest.cpp  CookedAssetManifest.hpp  CookedAssetManifestJson.cpp  CookedAssetManifestJson.hpp  CookedAssetManifestSummary.cpp  CookedAssetManifestSummary.hpp  GltfMaterialAssetImporter.cpp  GltfMaterialAssetImporter.hpp  GltfMaterialSlotAudit.cpp  GltfMaterialSlotAudit.hpp  LoadedAnimationSampler.cpp  LoadedAnimationSampler.hpp  LoadedAssetImporter.cpp  LoadedAssetImporter.hpp  LoadedAssetPayload.cpp  LoadedAssetPayload.hpp  LoadedTextureImageImporter.cpp  LoadedTextureImageImporter.hpp  TerrainAssetCatalog.cpp  TerrainAssetCatalog.hpp  TerrainAssetDependencyValidator.cpp  TerrainAssetDependencyValidator.hpp
src/engine/core/: Engine.cpp  Engine.hpp
src/engine/jobs/: JobQueue.cpp  JobQueue.hpp  README.md
src/engine/renderer_integration/: AnimationPlaybackState.cpp  AnimationPlaybackState.hpp  AnimationPosePalette.cpp  AnimationPosePalette.hpp  AssetSourceUploadIntent.cpp  AssetSourceUploadIntent.hpp  ChunkTerrainHandleMap.cpp  ChunkTerrainHandleMap.hpp  LoadedAssetUploadExecutor.cpp  LoadedAssetUploadExecutor.hpp  LoadedAssetUploadPlan.cpp  LoadedAssetUploadPlan.hpp  LoadedMeshUploadDiagnostics.cpp  LoadedMeshUploadDiagnostics.hpp  RenderSpace.cpp  RenderSpace.hpp  RendererHost.cpp  RendererHost.hpp  RigidNodeAttachmentDrawBuilder.cpp  RigidNodeAttachmentDrawBuilder.hpp  TerrainAssetResolver.cpp  TerrainAssetResolver.hpp  TerrainChunkRequests.cpp  TerrainChunkRequests.hpp  TerrainChunkSetup.cpp  TerrainChunkSetup.hpp  TerrainDescriptorBuilder.cpp  (+67 more)
src/engine_bridge/: AGENTS.md  StreamingSeam.cpp  StreamingSeam.hpp
src/renderer/: AGENTS.md
tests/: AGENTS.md  CMakeLists.txt  animation_test.cpp  asset_contract_test.cpp  color_grading_test.cpp  culling_diagnostics_test.cpp  decal_test.cpp  engine_animation_playback_state_test.cpp  engine_animation_pose_palette_test.cpp  engine_asset_catalog_test.cpp  engine_asset_dependency_validator_test.cpp  engine_asset_source_catalog_test.cpp  engine_asset_source_descriptor_test.cpp  engine_asset_source_plan_test.cpp  engine_asset_source_upload_intent_test.cpp  engine_assimp_loaded_asset_importer_test.cpp  engine_assimp_rigid_node_scene_importer_test.cpp  engine_assimp_scene_probe_test.cpp  engine_chunk_terrain_handle_map_test.cpp  engine_cooked_asset_manifest_json_test.cpp  engine_cooked_asset_manifest_summary_test.cpp  engine_cooked_asset_manifest_test.cpp  engine_core_test.cpp  engine_gltf_material_asset_importer_test.cpp  engine_job_queue_test.cpp  engine_loaded_animation_sampler_test.cpp  engine_loaded_asset_importer_test.cpp  engine_loaded_asset_payload_test.cpp  engine_loaded_asset_upload_executor_test.cpp  engine_loaded_asset_upload_plan_test.cpp  engine_loaded_mesh_upload_diagnostics_test.cpp  engine_loaded_texture_image_importer_test.cpp  engine_render_space_test.cpp  engine_streaming_seam_test.cpp  engine_terrain_asset_batch_resolver_test.cpp  engine_terrain_asset_catalog_test.cpp  engine_terrain_asset_dependency_validator_test.cpp  engine_terrain_asset_resolver_test.cpp  engine_terrain_chunk_requests_test.cpp  engine_terrain_chunk_setup_test.cpp  (+67 more)
tests/consumer_smoke/: CMakeLists.txt  CMakePresets.json  main.cpp
tests/fixtures/assets/dev/: dev_basic.fmatdev  dev_basic_texture3.fmatdev  dev_checker_2x2.ftexdev  dev_triangle.fmeshdev
tests/fixtures/assets/gltf/: empty_scene.gltf  line_primitive.gltf  malformed.gltf  material_all_slots.gltf  material_base_color.gltf  material_missing_image.gltf  material_no_texture.gltf  multi_mesh_static.gltf  no_normals.gltf  rigid_node_missing_tangent.gltf  rigid_node_two_meshes.gltf  skinned_triangle.gltf  skinned_triangle_animation.gltf  skinned_triangle_animation_missing_rotation.gltf  skinned_triangle_missing_uv.gltf  skinned_triangle_missing_weights.gltf  static_triangle.gltf  static_triangle_missing_tangent.gltf  vertex_colors.gltf
tools/: AGENTS.md
tools/asset_pipeline/: AGENTS.md  README.md
tools/ci/: Run-WindowsPackageValidation.ps1
tools/shader_compile/: AGENTS.md  README.md
(+105 files in other folders)
